--- a/charts/argocd-apps/Chart.yaml
+++ b/charts/argocd-apps/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: argocd-apps
 description: A Helm chart for managing additional Argo CD Applications and Projects
 type: application
-version: 2.0.1
+version: 2.0.2
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 keywords:
@@ -19,3 +19,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: fixed
       description: not rendering empty app description
+  artifacthub.io/changes: |
+    - kind: added
+      description: allow setting applicationset finalizers
