Added chart values deprecation parameters. This will simplify updates for changes in charts.
Pattern copied from https://github.com/jenkinsci/helm-charts/blob/jenkins-5.7.1/charts/jenkins/templates/deprecation.yaml

Signed-off-by: Jānis Orlovs <janis@cwise.eu>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -3721,3 +3721,7 @@ notifications:
     # For more information: https://argo-cd.readthedocs.io/en/stable/operator-manual/notifications/triggers/#default-triggers
     # defaultTriggers: |
     #   - on-sync-status-unknown
+
+# -- Checks if any deprecated values are used
+checkDeprecation: true
+
