Added chart values deprecation parameters. This will simplify updates for changes in charts.
Pattern copied from https://github.com/jenkinsci/helm-charts/blob/jenkins-5.7.1/charts/jenkins/templates/deprecation.yaml
v1

Signed-off-by: Jānis Orlovs <janis@cwise.eu>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -3723,5 +3723,5 @@ notifications:
     #   - on-sync-status-unknown
 
 # -- Checks if any deprecated values are used
-checkDeprecation: true
+checkDeprecation: false
 
