--- a/charts/argo-cd/templates/argocd-server/deprecation.yaml
+++ b/charts/argo-cd/templates/argocd-server/deprecation.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.checkDeprecation }}
    {{- if .Values.server.config }}
-      {{ fail "`server.config` does no longer exist. It has been renamed to `configs`" }}
+      {{ fail "`server.config` no longer exists. It has been renamed to `configs`" }}
    {{- end }}
 {{- end }}
