--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: added
-      description: Added values depreciation pattern for Chart, to make easier upgrade process.
+      description: Added values deprecation pattern for Chart, to make easier upgrade process.
