feat: Add affinity to redisSecretInit Job
Signed-off-by: killianmuldoon <kmuldoon@nvidia.com>

--- a/charts/argo-cd/templates/redis-secret-init/job.yaml
+++ b/charts/argo-cd/templates/redis-secret-init/job.yaml
@@ -54,6 +54,10 @@ spec:
       priorityClassName: {{ . }}
       {{- end }}
       restartPolicy: OnFailure
+      {{- with include "argo-cd.affinity" (dict "context" . "component" .Values.redisSecretInit) }}
+      affinity:
+        {{- trim . | nindent 8 }}
+      {{- end }}
       {{- with .Values.redisSecretInit.nodeSelector | default .Values.global.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
