doc(argo-cd): add changelogs Signed-off-by: Tristan Duverger <tristan.duverger@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -28,3 +28,10 @@ annotations:
   artifacthub.io/changes: |
     - kind: fixed
       description: Certificate template was wrong leading to null
+    - kind: added
+      description: Capability to deploy gateway
+    - kind: added
+      description: Capability to deploy gateway http route
+    - kind: added
+      description: Specific GKE gateway objects
+    
