ref(argo-cd): using default value for gateway name Signed-off-by: Tristan Duverger <tristan.duverger@gmail.com>

--- a/charts/argo-cd/templates/argocd-server/gateway-httproute.yaml
+++ b/charts/argo-cd/templates/argocd-server/gateway-httproute.yaml
@@ -19,7 +19,7 @@ spec:
   parentRefs:
     - group: gateway.networking.k8s.io
       kind: Gateway
-      name: {{ tpl .Values.server.gateway.name . }}
+      name: {{ .Values.server.gateway.name | default (include "argo-cd.server.fullname" .) }}
       {{- with .Values.server.gateway.httpRoute.gatewaySection }}
       sectionName: {{ . }}
       {{- end }}
