--- a/charts/argo-cd/templates/argocd-server/gateway.yaml
+++ b/charts/argo-cd/templates/argocd-server/gateway.yaml
@@ -2,7 +2,7 @@
 kind: Gateway
 apiVersion: gateway.networking.k8s.io/v1
 metadata:
-  name: {{ tpl .Values.server.gateway.name . }}
+  name: {{ .Values.server.gateway.name | default (include "argo-cd.server.fullname" .) }}
   namespace: {{ .Release.Namespace | quote }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}
