feat(argo-cd): disable gatewayAPI route by default Signed-off-by: Tristan Duverger <tristan.duverger@gmail.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2155,7 +2155,7 @@ server:
   # NOTE: Alpha feature, gRPC & TLS pass-through will not work
   gatewayAPI:
     # -- Enable a Gateway API resources for the Argo CD server
-    enabled: true
+    enabled: false
     # -- Additional route labels
     labels: {}
     # -- Additional route annotations
