--- a/charts/argo-cd/templates/argocd-server/gateway-httproute.yaml
+++ b/charts/argo-cd/templates/argocd-server/gateway-httproute.yaml
@@ -20,6 +20,7 @@ spec:
     - group: gateway.networking.k8s.io
       kind: Gateway
       name: {{ .Values.server.gateway.name | default (include "argo-cd.server.fullname" .) }}
+      namespace: {{ .Values.server.gateway.namespace | default .Release.Namespace }}
       {{- with .Values.server.gateway.httpRoute.gatewaySection }}
       sectionName: {{ . }}
       {{- end }}
