--- a/charts/argo-cd/templates/argocd-server/gke/backend-policy.yaml
+++ b/charts/argo-cd/templates/argocd-server/gke/backend-policy.yaml
@@ -18,7 +18,7 @@ metadata:
 spec:
   default:
     {{- with .Values.server.gateway.gke.GCPBackendPolicy.spec.default }}
-      {{- toYaml . | nindent 6 }}
+      {{- tpl (toYaml .) $ | nindent 6 }}
     {{- end }}
   targetRef:
     group: ""
