--- a/charts/argo-cd/templates/argocd-server/gke/gateway-policy.yaml
+++ b/charts/argo-cd/templates/argocd-server/gke/gateway-policy.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.gke.io/v1
 kind: GCPGatewayPolicy
 metadata:
   name: {{ include "argo-cd.server.fullname" . }}
-  namespace: {{ .Release.Namespace | quote }}
+  namespace: {{ tpl (toString .Values.server.gateway.namespace) . }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}
     {{- with .Values.server.gateway.gke.GCPGatewayPolicy.labels }}
@@ -23,5 +23,5 @@ spec:
   targetRef:
     group: gateway.networking.k8s.io
     kind: Gateway
-    name: {{ include "argo-cd.server.fullname" . }}
+    name: {{ tpl (toString .Values.server.gateway.name) . }}
 {{- end }}
