fix(argo-cd): invalid reference to ingress in gateway route Signed-off-by: Tristan Duverger <tristan.duverger@gmail.com>

--- a/charts/argo-cd/templates/argocd-server/gateway-httproute.yaml
+++ b/charts/argo-cd/templates/argocd-server/gateway-httproute.yaml
@@ -30,7 +30,7 @@ spec:
       {{- toYaml . | nindent 4 }}
     {{- end }}
   rules:
-    {{- with .Values.server.ingress.extraRules }}
+    {{- with .Values.server.gateway.httpRoute.extraRules }}
       {{- tpl (toYaml .) $ | nindent 4 }}
     {{- end }}
     - matches:
