feat(argo-cd): Expose cluster's project as a label
Given that Argo CD's ApplicationSet cluster generator allows selecting
clusters using arbitrary labels, it'd be useful for operators to have
the clusters' project available as label to for instance easily deploy
a single application to all the clusters of a given project.

More info: https://github.com/argoproj/argo-helm/discussions/2949

Signed-off-by: Nacho Barrientos <nacho.barrientos@cern.ch>

--- a/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
+++ b/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
@@ -11,6 +11,9 @@ metadata:
       {{- toYaml . | nindent 4 }}
     {{- end }}
     argocd.argoproj.io/secret-type: cluster
+    {{- if $cluster_value.project }}
+    argocd.argoproj.io/project: {{ $cluster_value.project | quote }}
+    {{- end }}
   {{- with $cluster_value.annotations }}
   annotations:
     {{- range $key, $value := . }}
