--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.12-2024.9.30-a87492b22
+appVersion: v2.12-2024.10.5-66e1e38fa
 kubeVersion: ">=1.23.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 7.4.7-2-cap-2.12-2024.9.30-a87492b22
+version: 7.4.7-3-cap-2.12-2024.10.5-66e1e38fa
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Fix extra env in acr controller deployment.yaml
+      description: Feat: (event-reporter) report change revisions metadata in app annotations
