--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Feat: (event-reporter) report change revisions metadata in app annotations
+      description: Feat: [event-reporter] report change revisions metadata in app annotations
