--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v2.12-2024.10.5-66e1e38fa
 kubeVersion: ">=1.23.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 7.4.7-3-cap-2.12-2024.10.5-66e1e38fa
+version: 7.4.7-4-cap-2.12-2024.10.5-66e1e38fa
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Feat [event-reporter] report change revisions metadata in app annotations
+      description: Added env variable for acr controller to retrieve server.rootpath from params ConfigMap
