--- a/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
+++ b/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
@@ -20,7 +20,7 @@ metadata:
 type: Opaque
 stringData:
   {{- if $cluster_value.shard }}
-  shard: {{ $cluster_value.shard }}
+  shard: {{ $cluster_value.shard | quote }}
   {{- end }}
   name: {{ required "A valid .Values.configs.clusterCredentials.CLUSTERNAME.name entry is required!" $cluster_key }}
   server: {{ required "A valid .Values.configs.clusterCredentials.CLUSTERNAME.server entry is required!" $cluster_value.server }}
