--- a/charts/argocd-image-updater/templates/rbac.yaml
+++ b/charts/argocd-image-updater/templates/rbac.yaml
@@ -17,6 +17,14 @@ rules:
       - get
       - list
       - watch
+  {{- if not .Values.createClusterRoles }}
+  - apiGroups:
+      - ""
+    resources:
+      - events
+    verbs:
+      - create
+  {{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
