--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.5.11
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.42.5
+version: 0.42.6
 icon: https://argo-workflows.readthedocs.io/en/stable/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -16,5 +16,5 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
-    - kind: fixed
-      description: Avoid to create ClusterRole for cluster template when singleNamespace
+    - kind: added
+      description: Support lifecycle and terminationGracePeriodSeconds for server
