--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -760,6 +760,12 @@ server:
   # -- Enables init containers to be added to the server deployment
   extraInitContainers: []
 
+  # -- Specify postStart and preStop lifecycle hooks for server container
+  lifecycle: {}
+
+  # -- terminationGracePeriodSeconds for container lifecycle hook
+  terminationGracePeriodSeconds: 30
+
 # -- Array of extra K8s manifests to deploy
 extraObjects: []
   # - apiVersion: secrets-store.csi.x-k8s.io/v1
