--- a/charts/argo-cd/templates/argocd-server/clusterrole.yaml
+++ b/charts/argo-cd/templates/argocd-server/clusterrole.yaml
@@ -14,15 +14,16 @@ rules:
     resources:
       - '*'
     verbs:
-      - delete
-      - get
-      - patch
+      - delete  # supports deletion a live object in UI
+      - get     # supports viewing live object manifest in UI
+      - patch   # supports `argocd app patch`
+      - list    # supports `argocd appset generate` with cluster generator
   - apiGroups:
       - ""
     resources:
       - events
     verbs:
-      - list
+      - list    # supports listing events in UI
       - create
   - apiGroups:
       - ""
@@ -30,7 +31,7 @@ rules:
       - pods
       - pods/log
     verbs:
-      - get
+      - get     # supports viewing pod logs from UI
   {{- if eq (toString (index .Values.configs.cm "exec.enabled")) "true" }}
   - apiGroups:
       - ""
