fix(argocd-image-updater): Add new env to respect log level setting
Signed-off-by: Dong Wang <wd@wdicc.com>

--- a/charts/argocd-image-updater/templates/deployment.yaml
+++ b/charts/argocd-image-updater/templates/deployment.yaml
@@ -82,6 +82,12 @@ spec:
                 key: log.level
                 name: argocd-image-updater-config
                 optional: true
+          - name: ARGOCD_LOGLEVEL
+            valueFrom:
+              configMapKeyRef:
+                key: log.level
+                name: argocd-image-updater-config
+                optional: true
           - name: GIT_COMMIT_USER
             valueFrom:
               configMapKeyRef:
